# docker-dash

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Pipfile  README.md  pyproject.toml
app/: app.py  requirements.txt
