[tool.poetry]
name = "docker-dash"
version = "1.0.0"
description = "Dockerize a plotly/dash app."
authors = ["JC <jc@jucyai.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.6.0"
dash-daq = "^0.5.0"
dash-bootstrap-components = "^1.2.0"
plotly = "^5.9.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
